# cell-sim

./: .gitignore  README.md  SOFTWARE.md  ato.yaml  cellsim.bom.csv  cellsim.pos.csv  example_set_voltages.py  pyproject.toml
.cursor/: mcp.json
cell_sim.egg-info/: PKG-INFO  SOURCES.txt
docs/: cellsim-v2-spec.md  spec-v5-review.md
elec/backplane/: ato.yaml  backplane.ato  solver-probes.ato
elec/backplane/relays-local/: helpers.ato  relays.ato
elec/backplane/st-ldk220-local/: .package_meta.json  ato.yaml  st-ldk220.ato
elec/backplane/ti-ina228-local/: .package_meta.json  ti-ina228.ato  ti_addressor2.py  usage.ato
elec/backplane/ti-tps54560x-local/: README.md  ti-tps54560x.ato  usage.ato
elec/cell-card/: ads131m04.ato  ato.yaml  base-card-debug.ato  base-card.ato  cell-card.ato  cell.ato  hx1198.ato  iso7721.ato  iso7741.ato  test-solver.ato  thermistor-card.ato  thermistor.ato
elec/cell-card/microchip-lan8742a-local/: ato.yaml  microchip-lan8742a.ato  usage.ato
elec/cell-card/st-ldk220-local/: usage.ato
elec/cell-card/st-stm32h723-local/: .package_meta.json  README.md  ato.yaml  st-stm32h723.ato
elec/cell-card/ti-tlv75901-local/: ato.yaml  ti-tlv75901.ato
elec/src/: cell-sim.ato
firmware/: Makefile  README.md
firmware/card/: CMakeLists.txt  prj.conf  west.yml
firmware/src/: cell.cpp  cell.h  main.cpp
lib/: cli.py
software/: pyproject.toml
software/src/cellsim/: __init__.py  app_state.py  bringup.py  card_manager.py  client.py  deps.py  main.py  models.py  protocol.py  slot_mux.py  slot_power.py  uart_flasher.py
(+359 files in other folders)
