[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellsim"
version = "2.0.0-dev"
description = "CellSim v2 - Modular battery cell simulator control software"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "numpy>=2.2",
    "httpx>=0.28",
    "websockets>=14",
    "zeroconf>=0.136",
    "backoff>=2.2",
    "requests>=2.32",
    "rich>=13",
    "appdirs>=1.4",
    "pyserial>=3.5",
]

[project.optional-dependencies]
hw = [
    # Only needed when running on the CM5 hardware
    "smbus2>=0.4",
    "adafruit-blinka",
    "adafruit-circuitpython-ssd1306",
    "adafruit-extended-bus",
    "pillow>=11",
]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "httpx>=0.28",
]

[project.scripts]
cellsim = "cellsim.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/cellsim"]

[tool.ruff]
target-version = "py313"
line-length = 100
